# InfiniteHash

./: .cruft.json  README.md  README_AWS.md  deploy.sh  noxfile.py  pyproject.toml  pyproject.toml.rej  setup-deployed.sh  setup-prod.sh
.github/workflows/: cd.yml
app/envs/deployed/: Dockerfile  celery-entrypoint.sh  gunicorn.conf.py
app/envs/prod/: celery-entrypoint.sh  gunicorn.conf.py
app/src/: conftest.py  manage.py  manual_test_miner_compose.py  manual_test_real_miner.py  mypy.ini  pytest.ini
app/src/infinite_hashes/: asgi.py  celery.py  settings.py  settings.py.rej  urls.py  utils.py  wsgi.py
app/src/infinite_hashes/aps_miner/: README.md  __init__.py  __main__.py  brainsproxy.py  callbacks.py  config.py  config.toml.example  constants.py  executor.py  models.py  proxy_routing.py  scheduler.py  tasks.py
app/src/infinite_hashes/aps_miner/tests/: test_callbacks_proxy_mode.py  test_config_limits.py  test_proxy_routing.py  test_reconcile_miner_bids.py
app/src/infinite_hashes/auctions/: mechanism_split.py  utils.py
app/src/infinite_hashes/consensus/: bidding.py  commitment.py  parser.py  price.py
app/src/infinite_hashes/consensus/tests/: conftest.py  (+7 more)
app/src/infinite_hashes/testutils/: __init__.py
app/src/infinite_hashes/validator/: __init__.py  admin.py  apps.py  auction_processing.py  hashrates.py  locks.py  models.py  tasks.py  worker_windows.py
app/src/luxor_subnet/: asgi.py  celery.py  celery_schedules.py  settings.py  wsgi.py
app/src/luxor_subnet/validator/: __init__.py  admin.py  apps.py  tasks.py
app/src/tests/integration/: README.md  __init__.py  conftest.py  helpers.py  test_basic_scenario.py  test_budget_cap_commitment.py  test_burn_mechanism.py  test_max_price_filter.py  test_uid_replacement_scenario.py
devops/scripts/: vars.sh
devops/tf/core/: backend.tf  terraform.tfvars
devops/tf/main/files/: docker-compose.yml
devops/vultr_scripts/: vultr-deploy.py
devops/vultr_tf/core/: main.tf  vultr-cloud-init.tftpl
docs/: subnet_auction_incentive_system.md
envs/deployed/: .env.template  docker-compose.yml
envs/dev/: .env.template  docker-compose.yml
envs/miner/: docker-compose.yml
envs/miner-ihp/: docker-compose.yml
envs/prod/: .env.template  docker-compose.yml
installer/: README.md  install.sh  miner_install.sh  update_compose.sh  update_miner_compose.sh
nginx/templates/: default.conf.template
tools/: decode_metadata_types.py  manual_test_miner_compose.sh  update_compose_digest.py
(+67 files in other folders)
